SEO Boost: Add Open Graph tags, sitemap, and robots.txt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="images/icon-512.png">
-</head>
+    <link rel="apple-touch-icon" href="images/icon-512.png">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/">
+    <meta property="og:title" content="SmartHome & Wellness - Mejora tu Vida con Tecnología">
+    <meta property="og:description"
+        content="Descubre los mejores productos para un hogar inteligente y tu bienestar personal. Análisis y recomendaciones honestas para 2026.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/icon-512.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pacoggg.github.io/smart-home-wellness-site/">
+    <meta property="twitter:title" content="SmartHome & Wellness - Mejora tu Vida con Tecnología">
+    <meta property="twitter:description"
+        content="Descubre los mejores productos para un hogar inteligente y tu bienestar personal. Análisis y recomendaciones honestas para 2026.">
+    <meta property="twitter:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/icon-512.png">
 
 <body>
     <header>
