--- a/reviews/ice-maker.html
+++ b/reviews/ice-maker.html
@@ -14,6 +14,14 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/ice-maker.html">
+    <meta property="og:title" content="Análisis: Máquina de Hielo Encimera - SmartHome & Wellness">
+    <meta property="og:description"
+        content="Review de la Máquina de Hielo para Encimera. Olvídate de las cubiteras y ten hielo siempre listo en minutos.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/ice-maker.png">
 </head>
 
 <body>
