--- a/reviews/index.html
+++ b/reviews/index.html
@@ -14,6 +14,14 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/index.html">
+    <meta property="og:title" content="Reseñas y Análisis - SmartHome & Wellness">
+    <meta property="og:description"
+        content="Lee nuestros análisis en profundidad de los mejores productos. Opiniones honestas y pruebas reales.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/icon-512.png">
 </head>
 
 <body>
