--- a/reviews/robot-vacuum.html
+++ b/reviews/robot-vacuum.html
@@ -14,6 +14,13 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/robot-vacuum.html">
+    <meta property="og:title" content="Análisis: Robot Aspirador Inteligente - SmartHome & Wellness">
+    <meta property="og:description" content="¿Merece la pena este robot aspirador? Analizamos su potencia y mapeo.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/robot-vacuum.png">
 </head>
 
 <body>
