--- a/reviews/stanley-quencher.html
+++ b/reviews/stanley-quencher.html
@@ -14,6 +14,13 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/stanley-quencher.html">
+    <meta property="og:title" content="Análisis: Stanley Quencher H2.0 - SmartHome & Wellness">
+    <meta property="og:description" content="Opinión real sobre el vaso térmico de moda. ¿Mantiene el frío 11 horas?">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/stanley-cup.png">
 </head>
 
 <body>
