--- a/reviews/sunrise-alarm.html
+++ b/reviews/sunrise-alarm.html
@@ -14,6 +14,14 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/sunrise-alarm.html">
+    <meta property="og:title" content="Análisis: Despertador Amanecer - SmartHome & Wellness">
+    <meta property="og:description"
+        content="¿Cansado de despertar sobresaltado? Probamos el despertar natural con luz.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/sunrise-alarm.png">
 </head>
 
 <body>
