--- a/reviews/smart-plug.html
+++ b/reviews/smart-plug.html
@@ -14,6 +14,14 @@
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#0f172a">
     <link rel="apple-touch-icon" href="../images/icon-512.png">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://pacoggg.github.io/smart-home-wellness-site/reviews/smart-plug.html">
+    <meta property="og:title" content="Análisis: Enchufe Inteligente WiFi - SmartHome & Wellness">
+    <meta property="og:description"
+        content="Guía completa sobre el Enchufe Inteligente. Domotiza tu casa por muy poco dinero.">
+    <meta property="og:image" content="https://pacoggg.github.io/smart-home-wellness-site/images/smart-plug.png">
 </head>
 
 <body>
