Update deals: Add B0G34CX52X

--- a/index.html
+++ b/index.html
@@ -171,6 +171,32 @@
                     </div>
                 </article>
 
+                <!-- Deal 2 -->
+                <article class="card" style="background: white; border: none;">
+                    <div
+                        style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                        AHORRA 80€
+                    </div>
+                    <div class="card-image-container">
+                        <img src="images/robot-vacuum.png" alt="Oferta Top" class="card-image"
+                            style="object-fit: contain; padding: 1rem;">
+                    </div>
+                    <div class="card-content">
+                        <h3 style="color: #0f172a;">Oferta Destacada Premium</h3>
+                        <p style="color: #64748b; font-size: 0.9rem;">Descuento exclusivo por tiempo limitado.</p>
+                        <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                            <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">119,93€</span>
+                            <span
+                                style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">199,89€</span>
+                        </div>
+                        <a href="https://www.amazon.es/dp/B0G34CX52X?tag=pfurgcamp-21" target="_blank" rel="nofollow"
+                            class="btn btn-primary"
+                            style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                            Ver Oferta en Amazon
+                        </a>
+                    </div>
+                </article>
+
                 <!-- New Product 8: Robot Vacuum -->
                 <article class="card" data-category="hogar">
                     <div class="card-image-container">
