Update deal: Projector B0G34CX52X with image

--- a/index.html
+++ b/index.html
@@ -175,15 +175,16 @@
                 <article class="card" style="background: white; border: none;">
                     <div
                         style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
-                        AHORRA 80€
+                        -40% DTO
                     </div>
                     <div class="card-image-container">
-                        <img src="images/robot-vacuum.png" alt="Oferta Top" class="card-image"
+                        <img src="images/projector.jpg" alt="Proyector Portátil 4K" class="card-image"
                             style="object-fit: contain; padding: 1rem;">
                     </div>
                     <div class="card-content">
-                        <h3 style="color: #0f172a;">Oferta Destacada Premium</h3>
-                        <p style="color: #64748b; font-size: 0.9rem;">Descuento exclusivo por tiempo limitado.</p>
+                        <h3 style="color: #0f172a;">Proyector Portátil con Android 14</h3>
+                        <p style="color: #64748b; font-size: 0.9rem;">Cine en casa 1080p con WiFi 6 y Bluetooth.
+                            Corrección automática.</p>
                         <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
                             <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">119,93€</span>
                             <span
