Add Ofertas link to navigation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="index.html" class="logo">SmartHome & Wellness</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#ofertas" style="color: #ef4444; font-weight: 700;">🔥 Ofertas</a></li>
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="reviews/index.html">Reseñas</a></li>
                     <li><a href="legal.html">Aviso Legal</a></li>
