Fix layout: Re-insert Deals section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,171 @@
             </div>
         </section>
 
+
+        <section class="container" id="ofertas" style="margin-top: 4rem; margin-bottom: 2rem;">
+            <div
+                style="background: linear-gradient(135deg, #ef4444 0%, #b91c1c 100%); padding: 2rem; border-radius: 1rem; color: white;">
+                <h2 style="color: white; margin-bottom: 0.5rem; display: flex; align-items: center; gap: 0.5rem;">
+                    🔥 Ofertas Flash & Cupones
+                    <span
+                        style="font-size: 1rem; background: yellow; color: red; padding: 0.2rem 0.6rem; border-radius: 99px; font-weight: 800;">HOY</span>
+                </h2>
+                <p style="margin-bottom: 2rem; opacity: 0.9;">Aprovecha estos descuentos temporales antes de que se
+                    agoten. Verificados hoy mismo.</p>
+
+                <!-- Deals Grid -->
+                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
+                    <!-- Deal 1: Regleta -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/power-strip-tower.jpg" alt="Regleta Vertical" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Regleta Vertical 8 Tomas + USB</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Protección sobretensión y ahorro de espacio.
+                            </p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">29,99€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0BXWTFNKD?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 2: Proyector 1 -->
+                    <article class="card" style="background: white; border: none;">
+                        <div
+                            style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                            -40% DTO
+                        </div>
+                        <div class="card-image-container">
+                            <img src="images/projector.jpg" alt="Proyector 4K" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Proyector Portátil Android 14</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Cine en casa 1080p, WiFi 6 y corrección auto.
+                            </p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">119,93€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">199,89€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0G34CX52X?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 3: Adaptador USB-C -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/usb-c-flat.jpg" alt="Adaptador USB-C" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Adaptador Ultraplano USB-C</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Expande la conectividad de tu portátil.</p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">19,99€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0CN3F9Y1Z?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 4: Hub USB-C -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/usb-c-hub.jpg" alt="Hub USB-C" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Hub USB-C 7 en 1 HDMI 4K</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">HDMI 4K, Carga PD 100W y puertos extra.</p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">15,99€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0DCJFGW9R?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 5: Termostato -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/smart-plug.png" alt="Termostato" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Termostato Digital Gas</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Control preciso para tu calefacción.</p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">13,29€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0CXDDVHB4?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 6: Portátil -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/icon-512.png" alt="Portátil ACEMAGIC" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Portátil ACEMAGIC Educativo</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Pantalla grande ideal para estudiantes.</p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">479,99€</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0G52DC7T7?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Ver Oferta
+                            </a>
+                        </div>
+                    </article>
+
+                    <!-- Deal 7: Proyector 2 -->
+                    <article class="card" style="background: white; border: none;">
+                        <div class="card-image-container">
+                            <img src="images/projector.jpg" alt="Proyector Bluetooth" class="card-image"
+                                style="object-fit: contain; padding: 1rem;">
+                        </div>
+                        <div class="card-content">
+                            <h3 style="color: #0f172a;">Proyector Bluetooth TV Stick</h3>
+                            <p style="color: #64748b; font-size: 0.9rem;">Altavoces integrados y conexión fácil.</p>
+                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">Ver Precio</span>
+                            </div>
+                            <a href="https://www.amazon.es/dp/B0G3TDCP53?tag=pfurgcamp-21" target="_blank"
+                                rel="nofollow" class="btn btn-primary"
+                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
+                                Consultar Oferta
+                            </a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <section class="container" id="productos">
             <div class="categories">
                 <a href="#" class="category-pill active" data-filter="all">Todos</a>
