--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     <!-- Deal 1: Regleta -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/power-strip-tower.jpg" alt="Regleta Vertical" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/71a8yOLPauL._AC_SL1500_.jpg"
+                                alt="Regleta Vertical" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Regleta Vertical 8 Tomas + USB</h3>
@@ -342,8 +342,8 @@
                     <!-- Deal 1: Regleta -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/power-strip-tower.jpg" alt="Regleta Vertical" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/71a8yOLPauL._AC_SL1500_.jpg"
+                                alt="Regleta Vertical" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Regleta Vertical 8 Tomas + USB</h3>
