Update image for ASIN B0G3TDCP53

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
                     <!-- Deal 7: Proyector 2 -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/projector.jpg" alt="Proyector Bluetooth" class="card-image"
+                            <img src="https://m.media-amazon.com/images/I/61+oEHXqPyL._AC_SL1500_.jpg"
+                                alt="Proyector Bluetooth" class="card-image"
                                 style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
@@ -470,7 +471,8 @@
                     <!-- Deal 7: Proyector 2 -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/projector.jpg" alt="Proyector Bluetooth" class="card-image"
+                            <img src="https://m.media-amazon.com/images/I/61+oEHXqPyL._AC_SL1500_.jpg"
+                                alt="Proyector Bluetooth" class="card-image"
                                 style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
