Update images for ASINs B0G52DC7T7 and B0CXDDVHB4

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     <!-- Deal 5: Termostato -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/smart-plug.png" alt="Termostato" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/61eGTm4t4-L._AC_SL1500_.jpg" alt="Termostato"
+                                class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Termostato Digital Gas</h3>
@@ -183,8 +183,8 @@
                     <!-- Deal 6: Portátil -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/icon-512.png" alt="Portátil ACEMAGIC" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/61a5VeNMyyL._AC_SL1500_.jpg"
+                                alt="Portátil ACEMAGIC" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Portátil ACEMAGIC Educativo</h3>
@@ -431,8 +431,8 @@
                     <!-- Deal 5: Termostato -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/smart-plug.png" alt="Termostato" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/61eGTm4t4-L._AC_SL1500_.jpg" alt="Termostato"
+                                class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Termostato Digital Gas</h3>
@@ -451,8 +451,8 @@
                     <!-- Deal 6: Portátil -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/icon-512.png" alt="Portátil ACEMAGIC" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <img src="https://m.media-amazon.com/images/I/61a5VeNMyyL._AC_SL1500_.jpg"
+                                alt="Portátil ACEMAGIC" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Portátil ACEMAGIC Educativo</h3>
