Update pricing for ASIN B0G3TDCP53

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
                     <!-- Deal 7: Proyector 2 -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
+                            <div
+                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                                -30% DTO
+                            </div>
                             <img src="https://m.media-amazon.com/images/I/61+oEHXqPyL._AC_SL1500_.jpg"
                                 alt="Proyector Bluetooth" class="card-image"
                                 style="object-fit: contain; padding: 1rem;">
@@ -211,7 +215,9 @@
                             <h3 style="color: #0f172a;">Proyector Bluetooth TV Stick</h3>
                             <p style="color: #64748b; font-size: 0.9rem;">Altavoces integrados y conexión fácil.</p>
                             <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">Ver Precio</span>
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">69,99€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">99,99€</span>
                             </div>
                             <a href="https://www.amazon.es/dp/B0G3TDCP53?tag=pfurgcamp-21" target="_blank"
                                 rel="nofollow" class="btn btn-primary"
@@ -471,6 +477,10 @@
                     <!-- Deal 7: Proyector 2 -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
+                            <div
+                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                                -30% DTO
+                            </div>
                             <img src="https://m.media-amazon.com/images/I/61+oEHXqPyL._AC_SL1500_.jpg"
                                 alt="Proyector Bluetooth" class="card-image"
                                 style="object-fit: contain; padding: 1rem;">
@@ -479,7 +489,9 @@
                             <h3 style="color: #0f172a;">Proyector Bluetooth TV Stick</h3>
                             <p style="color: #64748b; font-size: 0.9rem;">Altavoces integrados y conexión fácil.</p>
                             <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">Ver Precio</span>
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">69,99€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">99,99€</span>
                             </div>
                             <a href="https://www.amazon.es/dp/B0G3TDCP53?tag=pfurgcamp-21" target="_blank"
                                 rel="nofollow" class="btn btn-primary"
