Update product B0CN3F9Y1Z with new image, price and discount

--- a/index.html
+++ b/index.html
@@ -123,14 +123,20 @@
                     <!-- Deal 3: Adaptador USB-C -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/usb-c-flat.jpg" alt="Adaptador USB-C" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <div
+                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                                -8% DTO
+                            </div>
+                            <img src="https://m.media-amazon.com/images/I/61FFBZwEvtL._AC_SL1500_.jpg"
+                                alt="Adaptador USB-C" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Adaptador Ultraplano USB-C</h3>
                             <p style="color: #64748b; font-size: 0.9rem;">Expande la conectividad de tu portátil.</p>
                             <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">19,99€</span>
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">10,99€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">11,99€</span>
                             </div>
                             <a href="https://www.amazon.es/dp/B0CN3F9Y1Z?tag=pfurgcamp-21" target="_blank"
                                 rel="nofollow" class="btn btn-primary"
@@ -397,14 +403,20 @@
                     <!-- Deal 3: Adaptador USB-C -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
-                            <img src="images/usb-c-flat.jpg" alt="Adaptador USB-C" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
+                            <div
+                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                                -8% DTO
+                            </div>
+                            <img src="https://m.media-amazon.com/images/I/61FFBZwEvtL._AC_SL1500_.jpg"
+                                alt="Adaptador USB-C" class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
                         <div class="card-content">
                             <h3 style="color: #0f172a;">Adaptador Ultraplano USB-C</h3>
                             <p style="color: #64748b; font-size: 0.9rem;">Expande la conectividad de tu portátil.</p>
                             <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">19,99€</span>
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">10,99€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">11,99€</span>
                             </div>
                             <a href="https://www.amazon.es/dp/B0CN3F9Y1Z?tag=pfurgcamp-21" target="_blank"
                                 rel="nofollow" class="btn btn-primary"
