--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="index.html" class="logo">SmartHome & Wellness</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#ofertas" style="color: #ef4444; font-weight: 700;">🔥 Ofertas</a></li>
+                    <li><a href="ofertas.html" style="color: #ef4444; font-weight: 700;">🔥 Ofertas</a></li>
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="reviews/index.html">Reseñas</a></li>
                     <li><a href="legal.html">Aviso Legal</a></li>
@@ -165,73 +165,10 @@
                             </a>
                         </div>
                     </article>
-
-                    <!-- Deal 5: Termostato -->
-                    <article class="card" style="background: white; border: none;">
-                        <div class="card-image-container">
-                            <img src="https://m.media-amazon.com/images/I/61eGTm4t4-L._AC_SL1500_.jpg" alt="Termostato"
-                                class="card-image" style="object-fit: contain; padding: 1rem;">
-                        </div>
-                        <div class="card-content">
-                            <h3 style="color: #0f172a;">Termostato Digital Gas</h3>
-                            <p style="color: #64748b; font-size: 0.9rem;">Control preciso para tu calefacción.</p>
-                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">13,29€</span>
-                            </div>
-                            <a href="https://www.amazon.es/dp/B0CXDDVHB4?tag=pfurgcamp-21" target="_blank"
-                                rel="nofollow" class="btn btn-primary"
-                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
-                                Ver Oferta
-                            </a>
-                        </div>
-                    </article>
-
-                    <!-- Deal 6: Portátil -->
-                    <article class="card" style="background: white; border: none;">
-                        <div class="card-image-container">
-                            <img src="https://m.media-amazon.com/images/I/61a5VeNMyyL._AC_SL1500_.jpg"
-                                alt="Portátil ACEMAGIC" class="card-image" style="object-fit: contain; padding: 1rem;">
-                        </div>
-                        <div class="card-content">
-                            <h3 style="color: #0f172a;">Portátil ACEMAGIC Educativo</h3>
-                            <p style="color: #64748b; font-size: 0.9rem;">Pantalla grande ideal para estudiantes.</p>
-                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">479,99€</span>
-                            </div>
-                            <a href="https://www.amazon.es/dp/B0G52DC7T7?tag=pfurgcamp-21" target="_blank"
-                                rel="nofollow" class="btn btn-primary"
-                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
-                                Ver Oferta
-                            </a>
-                        </div>
-                    </article>
-
-                    <!-- Deal 7: Proyector 2 -->
-                    <article class="card" style="background: white; border: none;">
-                        <div class="card-image-container">
-                            <div
-                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
-                                -30% DTO
-                            </div>
-                            <img src="https://m.media-amazon.com/images/I/61+oEHXqPyL._AC_SL1500_.jpg"
-                                alt="Proyector Bluetooth" class="card-image"
-                                style="object-fit: contain; padding: 1rem;">
-                        </div>
-                        <div class="card-content">
-                            <h3 style="color: #0f172a;">Proyector Bluetooth TV Stick</h3>
-                            <p style="color: #64748b; font-size: 0.9rem;">Altavoces integrados y conexión fácil.</p>
-                            <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">69,99€</span>
-                                <span
-                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">99,99€</span>
-                            </div>
-                            <a href="https://www.amazon.es/dp/B0G3TDCP53?tag=pfurgcamp-21" target="_blank"
-                                rel="nofollow" class="btn btn-primary"
-                                style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
-                                Consultar Oferta
-                            </a>
-                        </div>
-                    </article>
+                </div>
+                <div style="text-align: center; margin-top: 2rem;">
+                    <a href="ofertas.html" class="btn btn-primary"
+                        style="background: white; color: #ef4444; font-weight: 700;">Ver todas las ofertas &rarr;</a>
                 </div>
             </div>
         </section>
