Update Termostato (B0CXDDVHB4) price and add coupon info

--- a/ofertas.html
+++ b/ofertas.html
@@ -160,6 +160,10 @@
                     <!-- Deal 5: Termostato -->
                     <article class="card" style="background: white; border: none;">
                         <div class="card-image-container">
+                            <div
+                                style="position: absolute; top: 1rem; right: 1rem; background: #ef4444; color: white; padding: 0.25rem 0.75rem; border-radius: 99px; font-weight: 700; font-size: 0.875rem; z-index: 10;">
+                                -15% DTO
+                            </div>
                             <img src="https://m.media-amazon.com/images/I/61eGTm4t4-L._AC_SL1500_.jpg" alt="Termostato"
                                 class="card-image" style="object-fit: contain; padding: 1rem;">
                         </div>
@@ -167,8 +171,12 @@
                             <h3 style="color: #0f172a;">Termostato Digital Gas</h3>
                             <p style="color: #64748b; font-size: 0.9rem;">Control preciso para tu calefacción.</p>
                             <div style="margin-top: 1rem; display: flex; align-items: center; gap: 0.5rem;">
-                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">13,29€</span>
+                                <span style="font-size: 1.5rem; font-weight: 700; color: #ef4444;">39,09€</span>
+                                <span
+                                    style="text-decoration: line-through; color: #94a3b8; font-size: 0.9rem;">45,99€</span>
                             </div>
+                            <p style="color: #16a34a; font-size: 0.8rem; font-weight: 700; margin-top: 0.25rem;">¡Aplica
+                                cupón de 6,90€!</p>
                             <a href="https://www.amazon.es/dp/B0CXDDVHB4?tag=pfurgcamp-21" target="_blank"
                                 rel="nofollow" class="btn btn-primary"
                                 style="margin-top: 1rem; width: 100%; text-align: center; background: #ef4444; box-shadow: none;">
